# moneybuffer-uk

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  RESPONSIBLE_AI.md  TECHNICAL_README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml
app/: streamlit_app.py
assets/: .gitkeep
docs/: scoring_rationale.md  synthetic_data_benchmark.md
notebooks/: 01_generate_synthetic_households.ipynb
scripts/: train_scam_classifier.py
src/moneybuffer/: __init__.py
src/moneybuffer/data_generation/: __init__.py  households.py  scam_messages.py  transactions.py
src/moneybuffer/recommendations/: __init__.py  action_engine.py  support_links.py
src/moneybuffer/reporting/: __init__.py  pdf_report.py
src/moneybuffer/resilience/: __init__.py  bands.py  explanations.py  features.py  score.py
src/moneybuffer/scams/: __init__.py  classifier.py  explanations.py  ml_model.py  rules.py
src/moneybuffer/stress_testing/: __init__.py  bill_shocks.py  income_shocks.py  scenario_engine.py
src/moneybuffer/ui/: __init__.py  theme.py
src/moneybuffer/validation/: __init__.py  input_validation.py
tests/: test_action_engine.py  test_data_generation.py  test_imports.py  test_input_validation.py  test_pdf_report.py  test_pipeline_integration.py  test_reliability.py  test_resilience_score.py  test_scam_ml_model.py  test_scam_rules.py  test_scenario_engine.py  test_support_links.py
