[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moneybuffer-uk"
version = "0.1.0"
description = "An educational public-interest fintech tool that helps households understand their financial buffer, simulate bill shocks, and identify scam-risk warning signs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "MoneyBuffer UK" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "streamlit>=1.29",
  "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1.9",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
# The app/ directory uses Streamlit which lacks complete stubs; exclude it.
exclude = ["^app/", "^notebooks/", "^scripts/"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "app", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
